apps/homescreen/style/dock.css
#footer {
  min-height: 7.5rem;
  width: 100%;
  position: fixed;
  bottom: 0;
  z-index: 10000;
  background-image: url('../resources/images/footer/background.png');
  background-size: 100%;
  overflow: hidden;
}

#footer .dockWrapper {
  width: 175%;
  height: 100%;
}

#footer ol {
  width: 100%;
  height: 100%;
  padding: 0;
  margin: 0;
  list-style-type: none;
  display: inline-block;
}

#footer li {
  height: 100%;
  position: relative;
  width: calc(100% / 7);
  float: left;
  text-align: center;
}

#footer > div.scrollable li {
	width: 7.2rem;
}

/* Container -> icon + label */
#footer li > div {
  width: 100%;
  margin-top: .5rem;
  pointer-events: none;
}

/* Option to delete apps */
#footer li span.options {
  position: absolute;
  top: .1rem;
  left: .5rem;
  width: calc(100% - .5rem);
  height: 2.6rem;
  z-index: 2;
  background: url(../resources/images/delete.png) no-repeat left top;
}

#footer li > div > *:not(img) {
  display: none;
}

